--- a/JWTAuthentication/appsettings.json
+++ b/JWTAuthentication/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SarathlalDB;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ConnStr": "Data Source=DESKTOP-E6T61J8\\SQLEXPRESS;Initial Catalog=JWTAuthenticationDB;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
